# vpn-gateway

./: .dockerignore  .env.example  .env.lan.example  .gitignore  .release-please-manifest.json  .rustfmt.toml  AGENTS.md  Analysis.txt  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_PLAN.md  Cargo.toml  DEVELOPMENT_HISTORY.md  Dockerfile  LICENSE  Makefile  README.md  SESSION_LOG.md  diagnostic-logs.md  diagnostic-report.md  docker-compose-dev.yml  docker-compose-local.yml  docker-compose-vps-simple.yml  docker-compose.dev.yml  docker-compose.yml  push.ps1  release-please-config.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci-mode-tests.yml  ci.yml  release-please.yml  release.yml
.obsidian/: workspace.json
benches/: proxy_bench.rs
config/: gateway.json  sources.json
config/unbound/: unbound.conf
dashboard/: index.html
data/: peer1.conf  wg0.conf
data/wg/peer1/: peer1.conf
data/wg/peer2/: peer2.conf
debian/: postinst  prerm  vpn-gateway.service
docs/: ARCHITECTURE_RETHINK.ru.md  OPERATIONS_MANUAL.ru.md
rpm/: postinst.sh  prerm.sh
scripts/: backup.sh  client-setup.sh  debug-entrypoint.sh  entrypoint-local.sh  entrypoint-simple.sh  entrypoint.sh  env-init.sh  generate_wg_keys.sh  install.sh  preflight.sh  run-gateway.sh  setup-network.sh  test-mode-automation.sh  vpn-gateway-setup
services/net-manager/: Dockerfile  README.md  config_generator.py  net_manager.py  requirements.txt  upnp_client.py  web_server.py
services/net-manager/templates/: status.html
src/: config.rs  lib.rs  main.rs
src/api/: web.rs
src/pool/: connection_pool.rs  geo_ip.rs  health_checker.rs  metrics.rs  mod.rs  persistence.rs  proxy.rs  source_manager.rs  state.rs  sticky_sessions.rs  warm_pool.rs
src/proxy/: mod.rs  sniff.rs  transparent.rs  udp.rs  upstream.rs
