[package]
name = "vpn-gateway"
version = "1.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Concurrent collections
dashmap = { version = "6", features = ["serde"] }

# HTTP client (source_manager)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Web API
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10"
futures = "0.3"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Socket options (SO_ORIGINAL_DST)
nix = { version = "0.29", features = ["net"] }
libc = "0.2.184"

# TLS validation for MITM detection in health checks
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
webpki-roots = "0.26"
rustls-pki-types = "1"

# Config hot reload
notify = "8"

# Parking lot for better mutex performance
parking_lot = "0.12"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http = "1"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "proxy_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
